<resources>
    <string name="app_name">游民</string>
    <string name="version">V1.0.1</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_home_page">全部</string>
    <string name="text_album_ranking">排名</string>
    <string name="text_my_album">我的</string>
    <string name="text_login">登录</string>
    <string name="text_wallpaper">壁纸</string>
    <string name="text_recommend">推荐</string>
    <string name="text_share">分享</string>
    <string name="text_setting">设置</string>
    <string name="text_weather">天气</string>
    <string name="text_news">新闻</string>
    <string name="text_album">相册</string>
    <string name="text_select_city">选择城市</string>
    <string name="text_about">关于</string>
    <string name="text_my_video">我的视频</string>
    <string name="text_system_information">系统信息</string>
    <string name="is_install_qq">您还没有安装腾讯QQ，是否前往浏览器下载？</string>
    <string name="is_install_sina">您还没有安装新浪微博，是否前往浏览器下载？</string>
    <string name="is_install_wechat">您还没有安装微信，是否前往浏览器下载？</string>
    <string name="text_game">游戏</string>
    <string name="text_phone">手机</string>

    <string name="progressbar_load_more">正在加载更多...</string>
    <string name="progressbar_not_have_more">别拉了，没有数据了...</string>
</resources>
