<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_page"
            android:checked="true"
            android:icon="@drawable/icon_all"
            android:title="@string/text_home_page"/>
        <item
            android:id="@+id/nav_album_ranking"
            android:icon="@drawable/icon_ranking"
            android:title="@string/text_album_ranking"/>
        <item
            android:id="@+id/nav_my_album"
            android:icon="@drawable/icon_my"
            android:title="@string/text_my_album"/>
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/icon_weather"
            android:title="@string/text_weather"/>
    </group>

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/icon_share"
                android:title="@string/text_share"/>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/icon_setting"
                android:title="@string/text_setting"/>
        </menu>
    </item>

</menu>
